[package]
name = "count_nucleotides_and_seqs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.pyo3]
version = "0.16.3"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]