[project]
name = "workflow-create-subtraction"
version = "0.0.0"
description = "A workflow for creating Virtool subtractions"
authors = [
    { name = "Ian Boyes" },
    { name = "Blake Smith" },
    { name = "Tiansheng Sui" },
    { name = "Markus Swoveland" },
    { name = "Christine Wong Chong" }
]
requires-python = ">=3.12.3,<3.13"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
virtool-workflow = { git = "https://github.com/virtool/virtool-workflow.git", rev="7.1.4" }

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-asyncio = "^0.21.1"
pytest-datafiles = "^2.0.1"
pytest-mock = "^3.12.0"
ruff = "^0.4.5"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
