[project]
name = "workflow-create-subtraction"
version = "0.0.0"
description = "A workflow for creating Virtool subtractions"
authors = [
    { name = "Ian Boyes" },
    { name = "Blake Smith" },
    { name = "Tiansheng Sui" },
    { name = "Markus Swoveland" },
    { name = "Christine Wong Chong" }
]
requires-python = ">=3.12.3,<3.13"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
virtool-workflow = "7.2.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-asyncio = "^1.1.0"
pytest-datafiles = "^3.0.0"
pytest-mock = "^3.14.1"
ruff = "^0.12.7"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
