[project]
name = "workflow-create-subtraction"
version = "0.0.0"
description = "A workflow for creating Virtool subtractions"
readme = "README.md"
authors = [
    { name = "Ian Boyes" },
    { name = "Blake Smith" },
    { name = "Tiansheng Sui" },
    { name = "Markus Swoveland" },
    { name = "Christine Wong Chong" },
    { name = "Reece Hoffmann" },
    { name = "Matthew Curtis" }
]
requires-python = ">=3.13.7,<3.14"
dependencies = [
    "virtool",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-datafiles>=3.0.0",
    "pytest-mock>=3.14.1",
    "ruff>=0.12.11",
    "ty>=0.0.12",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.uv.sources]
virtool = { git = "https://github.com/virtool/virtool", tag = "31.11.3" }
